[package]
name = "gdal-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.21.2", features= ["full"]}
gdal = "0.13.0"
tokio-postgres = "0.7.7"
anyhow = "1.0.65"
serde_json = "1.0.86"
colored = "2.0.0"
rust-ini = "0.18"
reqwest = { version = "0.11.5", features = ["blocking"] }